--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,7 +79,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
+}  
 .banner-container{
     width: 599px;
     height: 440px;
@@ -144,7 +144,7 @@ body{
     width: 206px;
     height: 96px;
     right: 470px;
-    bottom: 100px;
+    top: 755px;
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 12px;
@@ -154,9 +154,10 @@ body{
     display: flex;
     text-align: center;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding-left: 20px;
     padding-bottom: 10px;
+    padding-right: 20px;
 }
 .elipse {
     width: 40px;
@@ -166,11 +167,13 @@ body{
     border-radius: 50%;
     margin-right: 12px;
     
+    
 }
 
 .vdo-text {
     width: 110px;
-    height: 60px;
+    height: -30px;
+    
 }
 .vdo-num {
     color: rgb(250, 250, 249);
@@ -185,8 +188,7 @@ body{
 .vdo-tut {
     color: rgba(239, 237, 232, 0.65);
     font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
+    
     letter-spacing: 0.5px;
     text-align: left;
 
@@ -295,6 +297,70 @@ body{
     text-align: center;
 
 }
+/* limit */
+.limit {
+    width: 1044px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-align: center;
+}
+.limit-head {
+    color: rgb(230, 83, 60);;
+    font-size: 2.5rem;
+    font-weight: 900; 
+    margin-bottom: 14px;
+    text-align: center;
+}
+.limit-push {
+    color: rgb(255, 255, 255);
+    font-size: 4rem;
+    font-weight: 900; 
+    margin-bottom: 14px;
+    text-align: center;
+}
+.limit-header {
+    padding: 5px;
+    margin-bottom: 20px;
+}
+.limit-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1044px;
+    height: 273px;
+    margin-top: 110px;
+}
+.limit-container {
+    width: 231px;
+    height: 273px;
+    margin-right: 15px;
+
+}
+.limit-container > img {
+    border: 1px solid white;
+    padding: 10px;
+    border: none;
+    border-radius: 30%;
+    background-color: rgb(34, 34, 34);
+    margin-bottom: 10px;
+}
+.limit-title {
+    color: rgb(255, 255, 255);
+    font-size: 1.13rem;
+    font-weight: 600;
+    margin-bottom: 6px;
+    margin-top: 5px;
+}
+.limit-text {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.9rem;
+    font-weight: 400;
+    text-align: center;
+}
+
 /* Run */
 .run-extra {
     width: 1044px;
@@ -662,6 +728,7 @@ input {
     .bg-fitness {
         width: 100%;
         height: 1050px;
+        
        
         
     }
@@ -695,6 +762,7 @@ input {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 400px;
     }
     .bannr-head{
         width: 100%;
@@ -851,6 +919,9 @@ input {
         height: 200px;
         margin-left: -25px;
         margin-top: -1px;
+    }
+    .foot-head{
+        margin-left: -10px;
     }
     .foot-content {
         flex-direction: column;
