--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,14 +160,17 @@ body{
     padding-right: 20px;
 }
 .elipse {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     
     background: rgb(230, 83, 60);
     border-radius: 50%;
     margin-right: 12px;
     
     
+}
+.elipse > img {
+    padding: 5px;
 }
 
 .vdo-text {
@@ -786,6 +789,7 @@ input {
         right: 200px;
         top: 1000px;
     }
+    
     .work-vdo {
         width: 150px;
         height: 75px;
