--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,7 +200,7 @@ body{
 .work-vdo {
     position: absolute;
     width: 193px;
-    height: 98px;
+    height: 100px;
     right: 140px;
     top: 200px;
     box-sizing: border-box;
@@ -216,7 +216,10 @@ body{
     margin-top: 260px;
     
 }
-
+.work-content{
+    width: 110px;
+    height: 30px;
+}
 .work-num {
     color: rgb(255, 255, 255);
     font-size: 2.3rem;
@@ -229,14 +232,16 @@ body{
     margin-left: -24px;
 }
 .work-tut {
+    width: 180px;
     color: rgba(255, 255, 255, 0.65);
     font-size: 13px;
     font-weight: 400;
     line-height: 20px;
     letter-spacing: 1px;
     text-align: left;
-    margin-top: 5px;
-    margin-bottom: 16px
+    margin-top: 3px;
+    margin-bottom: 20px;
+    margin-left: -20px;
 }
 
 .content {
@@ -784,25 +789,56 @@ input {
 
     }
     .vdo-btn{
-        width: 150px;
-        height: 75px;
-        right: 200px;
-        top: 1000px;
+        width: 175px;
+        height: 85px;
+        right: 230px;
+        top: 1030px;
     }
     
+    
+    .elipse{
+        width: 40px;
+        height: 40px;
+    }
+    .elipse > img {
+        width: 30px;
+        height: 30px;
+    }
+    .vdo-text {
+        width: 80px;
+        height: -45px;
+        padding: 10px;
+    }
+    .vdo-num{
+        font-size: 18px;
+        margin-bottom: -7px;
+    }
+    .vdo-tut{
+        font-size: 12px;
+        width: 85px;
+    }
     .work-vdo {
         width: 150px;
-        height: 75px;
+        height: 70px;
         top: 570px;
         right: 20px;
     }
+    .work-content {
+        width: 80px;
+        height: 45px;
+        padding: 10px;
+    }
     .work-num {
         font-size: 1.6rem;
-        margin-bottom: -5px;
+        margin-top: -8px;
+        margin-bottom: 5px;
+        margin-right: -10px;
     }
     .work-tut {
+        width: 140px;
         font-size: 10px;
         margin-top: -5px;
+        margin-right: -10px;
     }
 
     .Habits {
